# ai-academy-backend

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  database.py  rate_limit.py  security.py
app/models/: __init__.py  accounting.py  assignment.py  become_instructor.py  blog.py  bundle.py  cart.py  category.py  certificate.py  comment.py  community_forum.py  contact.py  content.py  course.py  course_extra.py  course_relation.py  currency.py  discount.py  enrollment.py  favorite.py  featured_course.py  follow.py  forum.py  gift.py  learning.py  meeting.py  newsletter.py  noticeboard.py  notification.py  order.py  password_reset.py  payment.py  personal_note.py  product.py  product_order.py  quiz.py  registration_package.py  review.py  reward.py  role.py  (+7 more)
app/repositories/: accounting.py  assignments.py  (+39 more)
migrations/: env.py
scripts/: reset_db.sh  seed.py
tests/: conftest.py  test_admin_categories.py  test_admin_courses.py  test_admin_dashboard.py  test_admin_marketing.py  test_admin_offline_payments.py  test_admin_payments.py  test_admin_users.py  test_assignments.py  test_auth.py  test_become_instructor.py  test_blog.py  test_bundles_pay.py  test_bundles_purchase.py  test_cart.py  test_categories.py  test_certificates.py  test_community_forum.py  test_contact.py  test_content.py  test_coupons.py  test_courses.py  test_currency.py  test_dashboard.py  test_email.py  test_enrollment.py  test_events_calendar.py  test_favorites.py  test_featured.py  test_financial.py  test_follows.py  test_forums.py  test_gifts.py  test_guards.py  test_i18n.py  test_instructor.py  test_instructor_assignments.py  test_instructor_bundles.py  test_instructor_comments.py  test_instructor_dashboard.py  (+33 more)
(+191 files in other folders)
