[project]
name = "ai-academy-backend"
version = "0.1.0"
description = "AI Academy LMS — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "greenlet>=3.1",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    "fpdf2>=2.8.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep the explicit `str, Enum` pattern (used for Pydantic/SQLAlchemy enums).
ignore = ["UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the session so the async engine/pool isn't
# bound to a per-test loop.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
